<resources>

    <string name="app_name">Shani Finor - Project</string>

    <string name="text_view_project">Can You Guess?</string>
    <string name="main_activity_game">למשחק</string>
    <string name="main_activity_instructions">הוראות</string>
    <string name="main_activity_get_star">השג כוכב</string>

    <string name="activity_get_star_text">בשביל לקבל כוכב, צריך ללחוץ 100 פעמים על הכפתור האדום</string>
    <string name="zero">0</string>

    <string name="activity_game_menu_levels">שלבים</string>

    <string name="activity_instructions_title">הוראות</string>
    <string name="instructions_subtitle_the_game">המשחק</string>
    <string name="instructions_the_game">"\במשחק מוסתרת תמונה על ידי משבצות (כמו לוח שח מט).
המטרה שלך לגלות מה היא התמונה המסתתרת.
כל לחיצה על משבצת בתמונה, פותחת את המשבצת וכך החלק בתמונה שהמשבצת הסתירה, כבר לא יהיה מוסתר עד סוף השלב.
יש באפשרותך מספר מוגבל של לחיצות על משבצות בכדי לחשוף עוד חלקים של התמונה.
מתחת לתמונה יש קווים. כל קוו מייצג אות של האובייקט שבתמונה.
ברשותך מאגר של כ-20 אותיות שבתוכן יש את האותיות של שם התמונה.
כדי לעבור לשלב הבא, עליך להרכיב עם האותיות את מה שרואים בתמונה.
לדוגמא: אם יש תמונה של כיסא, עליך להרכיב את המילה 'כיסא'.
אם הצלחת לגלות מה התמונה, זאת אומרת שסיימת את השלב.
כשמסיימים שלב מקבלים כוכב.
במשחק ככל שהשלב יותר מתקדם, יש יותר משבצות שמסתירות את התמונה והתמונה יותר קשה לניחוש.
</string>
    <string name="instructions_subtitle_stars">כוכבים</string>
    <string name="instructions_stars">"\הכוכבים משמשים לקניית רמזים.
ניתן להשיג את הכוכבים בשתי דרכים.
דרך 1- כשמסיימים שלב מקבלים כוכב.
דרך 2- אפשר להיכנס ל'השג כוכב' שנצא במסך הבית.
ב'השג כוכב' צריך ללחוץ 100 פעמים על הכפתור האדום על מנת לקבל כוכב.
וכך אם אין לך מספיק כוכבים בשביל לקנות רמז, אפשר להיכנס ל'השג כוכב' ולהשיג כוכבים.
</string>
    <string name="instructions_subtitle_clues">רמזים</string>
    <string name="instructions_clues">"\יש לך אפשרות לרמזים מסוימים, אך הרמזים עולים כוכבים.
יש כמה סוגי רמזים:
1. פתיחת משבצת של תמונה (עלות כוכב אחד).
2. גילוי אות (עלות כוכב אחד).
3. להעלים חצי מהאותיות שבמאגר האותיות (עלות 3 כוכבים)- ניתן להשתמש בזה רק פעם אחת בכל שלב.
4. לגלות את התמונה (עלות 5 כוכבים).</string>
    <string name="password_required">סיסמה</string>
    <string name="login">התחברות</string>
    <string name="register">הרשמה</string>
    <string name="if_you_are_not_registered">אם אתם לא רשומים, לחצו כאן</string>

    <string name="validate_password">אימות סיסמה</string>
    <string name="activity_profile_title">פרופיל</string>
    <string name="log_out">התנתקות</string>
    <string name="name">שם:</string>
    <string name="email">מייל:</string>
    <string name="hint_user_name">שם משתמש</string>
    <string name="hint_email">אימייל</string>
    <string name="profile_image">תמונת פרופיל:</string>
    <string name="to_change_image">לשינוי תמונה</string>
    <string name="edit">עריכה</string>

    <string name="clues">רמזים</string>
    <string name="clue_openSquare">פתיחת משבצת שבתמונה - עולה כוכב אחד</string>
    <string name="not_enough_stars_for_clue">"איו לך מספיק כוכבים בשביל לקנות רמז זה"</string>

    <string name="stars">כוכבים: </string>
    <string name="wins">ניצחונות: </string>

    <string name="save_changes">שמירת  שינויים</string>
    <string name="logout_alert">אתם בטוחים שאתם רוצים להתנתק?</string>
    <string name="yes">כן</string>
    <string name="no">לא</string>
    <string name="the_game">המשחק</string>

    <string name="login_fail">ההרשמה נכשלה</string>
    <string name="enter_same_password">הכנס את אותה הסיסמה שהכנסת למעלה</string>
    <string name="password_length">הסיסמה צריכה להיות 6 תוים או יותר</string>
    <string name="fail_mail">מייל לא תקין</string>
    <string name="empty_name">השדה ריק. רשום שם משתמש</string>
    <string name="empty_email">השדה ריק. הכנס מייל</string>
    <string name="empty_password">השדה ריק. הכנס סיסמה</string>
    <string name="empty_same_password">השדה ריק. הכנס את אותה הסיסמה שהכנסת למעלה</string>

    <string name="user_does_not_exist">משתמש לא קיים</string>

    <string name="camera">מצלמה</string>
    <string name="picture_from_phone">תמונה מהפלאפון</string>

</resources>
