<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/instructions"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.screens.InstructionsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="-10sp"
                android:fontFamily="@font/secular_one"
                android:shadowColor="@color/titleShadowTextColor"
                android:shadowDx="-8"
                android:shadowDy="8"
                android:shadowRadius="2"
                android:text="@string/activity_instructions_title"
                android:textColor="@color/titleTextColor"
                android:textSize="50sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgButton_return"/>

            <TextView
                android:layout_width="200dp"
                android:layout_height="3dp"
                android:layout_gravity="center"
                android:layout_marginBottom="15sp"
                android:background="@color/titleTextColor"/>

            <TextView
                android:id="@+id/textView_title1"
                android:layout_width="385dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15sp"
                android:background="@drawable/gradient_background_3"
                android:fontFamily="@font/secular_one"
                android:gravity="center_vertical"
                android:paddingEnd="5dp"
                android:shadowColor="#80FFFFFF"
                android:shadowDx="-4"
                android:shadowDy="4"
                android:shadowRadius="10"
                android:text="@string/instructions_subtitle_the_game"
                android:textColor="@color/white"
                android:textSize="24sp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15sp"
                android:paddingRight="15sp"
                android:text="@string/instructions_the_game"
                android:textColor="#0C0C0C"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="385dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="15sp"
                android:background="@drawable/gradient_background_3"
                android:fontFamily="@font/secular_one"
                android:gravity="center_vertical"
                android:paddingEnd="5dp"
                android:shadowColor="#80FFFFFF"
                android:shadowDx="-4"
                android:shadowDy="4"
                android:shadowRadius="10"
                android:text="@string/instructions_subtitle_stars"
                android:textColor="#FFFFFF"
                android:textSize="24sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15sp"
                android:paddingRight="15sp"
                android:text="@string/instructions_stars"
                android:textColor="#0E0E0E"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="385dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="15sp"
                android:background="@drawable/gradient_background_3"
                android:fontFamily="@font/secular_one"
                android:gravity="center_vertical"
                android:paddingEnd="5dp"
                android:shadowColor="#80FFFFFF"
                android:shadowDx="-4"
                android:shadowDy="4"
                android:shadowRadius="10"
                android:text="@string/instructions_subtitle_clues"
                android:textColor="#FFFFFF"
                android:textSize="24sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15sp"
                android:paddingRight="15sp"
                android:text="@string/instructions_clues"
                android:textColor="#0E0E0E"
                android:textSize="20sp"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>